--- a/Uber_Eats/Home.html
+++ b/Uber_Eats/Home.html
@@ -16,16 +16,20 @@
             </h2>
             <br>
             <br>
-            <br>
             <h1>Hungry? You’re in the right place </h1>
-
+                <div class="input2">
             <input type="text"  placeholder="Enter delivery address" class="input">
-            <br>
-            Or Sign In to your account
             <select name="" id="selecton">
                 <option>Deliver now</option>
                 <option>Schedule for later</option>
             </select>
+             <button class="Button3">
+                    Get started
+                </button>
+        </div>
+        <p>
+        Or <span style="text-decoration: underline;">Sign In</span> to your account
+        </p>
         </div>
                 <button class="Button1">
                     Sign up
@@ -33,9 +37,6 @@
                 <button class="Button2">
                     <i class="fa-solid fa-user"></i>    
                     Log in
-                </button>
-                <button class="Button3">
-                    Get started
                 </button>
     </div>
     
