--- a/Coffee_web/coffee_page.html
+++ b/Coffee_web/coffee_page.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee</title>
     <link rel="stylesheet" href="coffee_page.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
     <div class="parent">
@@ -107,6 +108,150 @@
                 </div>
             </div>
         </div>
+        </div>
+        <div class="store">
+            <div>
+            <p id="stitle">
+                Store
+            </p>
+            <p id="spara">
+                Neque laoreet suspendisse interdum consectetur libero id faucibus nisl tincidunt. Dictum <br>
+                 fusce ut placerat orci nulla pellentesque dignissim enim sit. 
+            </p>
+            </div>
+            <br>
+            <div class="cards2">
+                <div class="card1">
+                    <img src="../Images/corpertum.png" alt="">
+                    <p id="spara1">
+                        A lacus vestibulum sed. Amet purus gravida quis blandit turpis. Enim facilisis gravida neque convallis.
+                    </p>
+                    <br>
+                    <br>
+                    <button class="b4">Visit Now</button>
+                </div>
+
+                <div class="card1">
+                    <img src="../Images/vesttibulun.png" alt="">
+                    <p id="spara1">
+                        A lacus vestibulum sed. Amet purus gravida quis blandit turpis. Enim facilisis gravida neque convallis.
+                    </p>
+                    <br>
+                    <br>
+                    <button class="b4">Visit Now</button>
+                </div>
+
+                <div class="card1">
+                    <img src="../Images/convallis.png" alt="">
+                    <p id="spara1">
+                        A lacus vestibulum sed. Amet purus gravida quis blandit turpis. Enim facilisis gravida neque convallis.
+                    </p>
+                    <br>
+                    <br>
+                    <button class="b4">Visit Now</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="Company-profile">
+
+            <div class="movie">
+                <video src="..//video/COFFEE.mp4" controls ></video>
+            </div>
+            <div class="company-content">
+                <p id="Company-Profile">Company Profile</p>
+                <p id="profile-content">
+                    Neque laoreet suspendisse interdum consectetur <br>libero id faucibus nisl tincidunt. Dictum fusce ut <br> placerat orci nulla pellentesque dignissim enim sit. 
+                </p>
+                <br>
+                <div class="icon">
+                    <img width="37" height="37" src="https://img.icons8.com/ios-filled/37/facebook--v1.png" alt="facebook--v1"/>  
+                    <img width="38" height="38" src="https://img.icons8.com/ios/38/instagram-new--v1.png" alt="instagram-new--v1"/>  
+                    <img width="38" height="38" src="https://img.icons8.com/ios/38/twitter--v1.png" alt="twitter--v1"/>
+                </div>
+            </div>
+        </div>
+
+        <div class="Contact-us">
+            <div class="address">
+                <img src="../Images/address.png" alt="">
+            </div>
+            <div class="Inputside">
+            <p id="ctitle">
+                Contact-Us
+            </p>
+            <input type="text" id="input1" placeholder="Your Name">
+            <br>
+            <br>
+            <input type="text" id="input1" placeholder="Gender">
+            <br>
+            <br>
+            <textarea id="input2" cols="30" rows="10" placeholder="Messages"></textarea>
+            <br>
+            <br>
+            <button id="b5">Send Message</button>
+        </div>
+        </div>
+
+        <div class="lastdata">
+            <img src="../Images/coffee logo.png" alt="" id="coffee1">
+            <div class="table1">
+                <p id="data1">
+                    Your Company
+                </p>
+                <br>
+                <p id="data2">
+                    Halimun Street 25
+                    Jakarta, Indonesia
+                    12850
+                    <br>
+                    <br>
+                    <br>
+                    www.yourdomain.com
+                </p>
+            </div>
+            <p id="data3">
+                Sitemap <br>
+                Home<br>
+                About<br>
+                Blog<br>
+                Menu<br>
+                Store<br>
+                Contact 
+            </p>
+
+            <p id="data3">
+                Lorem Ipsum <br>
+                Neque <br>
+                Suspendisse<br>
+                Dictum<br>
+                Porttitor<br>
+                Tincidunt<br>
+                Enim lobortis 
+            </p>
+
+            <p id="data3">
+                Sit Amet <br>
+                Neque <br>
+                Suspendisse<br>
+                Dictum<br>
+                Porttitor<br>
+                Tincidunt<br>
+                Enim lobortis  
+            </p>
+
+            <div class="data4">
+                <img src="../Images/icon1.png" alt="">
+                <br>
+                <p id="data5">Copyright ©  2020 Freepik <br>
+                Company S.L. All rights reserved. <br></p>
+                <div id="data5">
+                <img width="37" height="37" src="https://img.icons8.com/ios-filled/37/facebook--v1.png" alt="facebook--v1"/>  
+                    <img width="38" height="38" src="https://img.icons8.com/ios/38/instagram-new--v1.png" alt="instagram-new--v1"/>  
+                    <img width="38" height="38" src="https://img.icons8.com/ios/38/twitter--v1.png" alt="twitter--v1"/>
+                </div>
+                </div>
+            
         </div>
 </body>
 </html>
