--- a/sushi-web/sushi.html
+++ b/sushi-web/sushi.html
@@ -12,6 +12,7 @@
     referrerpolicy="no-referrer"
   />
   <link rel="stylesheet" href="./sushi.css">
+  <link rel="stylesheet" href="./media.css">
 </head>
 <body>
    <header class="header1">
