--- a/sushi-web/sushi.html
+++ b/sushi-web/sushi.html
@@ -134,6 +134,7 @@
 
         <img src="./image/black-shape2.png" alt="" id="shape11">
 
+        <div class="joint2">
         <div class="imagepage3">
             <img src="./image/image4.png" alt="" id="img2">
         </div>
@@ -150,6 +151,7 @@
             </p>
             <br>
             <button class="b2">Order Now</button>
+        </div>
         </div>
     </div>
    </header>
@@ -304,7 +306,7 @@
                 <i class="fa-brands fa-twitter"></i>
             <i class="fa-brands fa-whatsapp"></i>
             </div>
-                </div>
+     </div>
 
                 <table class="table1">
 
