--- a/sushi-web/sushi.html
+++ b/sushi-web/sushi.html
@@ -45,7 +45,9 @@
                     <h1 id="title1">
                         Title Here
                     </h1>                
-                    <p id="para1">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Vivamus lacinia odio vitae <br> vestibulum vestibulum.</p> 
+                    <p id="para1">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.</p> 
+                        <!-- Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Vivamus lacinia odio vitae <br> vestibulum vestibulum.</p>  -->
                     <br>
                     <button id="b1">
                         Order Now
@@ -76,7 +78,7 @@
             </p>
             
             <p id="para2">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                  Vivamus lacinia odio vitae vestibulum vestibulum. 
             </p>
         </div>
@@ -88,7 +90,7 @@
                     Title Here
                 </p>
                 <p id="content3">
-                    Lorem ipsum dolor sit amet, <br>
+                    Lorem ipsum dolor sit amet, 
                      consectetur adipiscing elit.
                 </p>
             </div>
@@ -101,7 +103,7 @@
                     Title Here
                 </p>
                 <p id="content3">
-                    Lorem ipsum dolor sit amet, <br>
+                    Lorem ipsum dolor sit amet, 
                      consectetur adipiscing elit.
                 </p>
             </div>
@@ -114,7 +116,7 @@
                     Title Here
                 </p>
                 <p id="content3">
-                    Lorem ipsum dolor sit amet, <br>
+                    Lorem ipsum dolor sit amet, 
                      consectetur adipiscing elit.
                 </p>
             </div>
@@ -184,18 +186,18 @@
         <div class="circle">
             <div class="circle1">
                <p id="p4"> 123
-                <br>
-                store </p>
+                </p>
+               <p id="p5"> store </p>
             </div>
             <div class="circle1">
               <p id="p4">  100
-                <br>
-                menu </p>
+                </p>
+               <p id="p5"> menu </p>
             </div>
             <div class="circle1">
               <p id="p4">  200
-                <br>
-                chef </p>
+                </p>
+                <p id="p5">chef </p>
             </div>
         </div>
    </header>
