--- a/sushi-web/sushi.html
+++ b/sushi-web/sushi.html
@@ -347,8 +347,8 @@
                 <table class="table1">
 
                     <tr>
-                        <th>About</th>
-                        <th>Services</th>
+                        <th id="t1">About</th>
+                        <th id="t2">Services</th>
                         <th>Others</th>
                     </tr>
 
