--- a/sushi-web/sushi.html
+++ b/sushi-web/sushi.html
@@ -18,6 +18,7 @@
    <header class="header1">
     <div class="nav-wrapper">
         <div class="container">
+            <input type="checkbox" id="check1">
             <nav>
                 <div class="image">
                     <img src="./image/food-logo.png" alt="">
@@ -29,10 +30,11 @@
                             <li><a href="#">Promo</a></li>
                             <li><a href="#">About</a></li>
                             <li><a href="#">Contact</a></li>
+                            <i class="fa-solid fa-magnifying-glass" id="search"></i>
                         </ul>
-                        <div class="search">
-                            <i class="fa-solid fa-magnifying-glass"></i>
-                        </div>
+                        <!-- <div class="search"> -->
+                            <!-- <i class="fa-solid fa-magnifying-glass"></i> -->
+                        <!-- </div> -->
                 <!-- </div> -->
             </nav>
         </div>
