--- a/Burgir-web/Burger.html
+++ b/Burgir-web/Burger.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    
     <link rel="stylesheet" href="./Burger.css">
-
+    <link rel="stylesheet" href="./media.css">
 </head>
 <body>
     <header id="header1">
@@ -60,6 +59,7 @@
 
          <header id="header2">               <!--Page2 -->
             <div class="joint">
+
             <div class="BurgerImage1">
                 <img src="./Images/burger1.png" alt="" id="burger1">
                 <p id="page2p1">
@@ -137,8 +137,8 @@
             </div>
 
             <div class="mainBurger1">
-                <img src="./Images/page2burger3.png" alt="" id="burger5">
-                <img src="./Images/page2shadow.png" alt="" id="Shadow4">
+                <img src="./Images/page2burger3.png" alt="" id="burger6">
+                <img src="./Images/page2shadow.png" alt="" id="Shadow2">
                 <p id="page3p7">
                     Lorem ipsum dolor
                 </p>
@@ -232,7 +232,7 @@
         <p id="page6p2">
             © Company Name 2020. All rights reserved.
         </p>
-
+        
         <p id="page6p3">
             <i class="fa-solid fa-location-dot"></i>
             Main Road, Building Name, Country
