--- a/Burgir-web/Burger.html
+++ b/Burgir-web/Burger.html
@@ -221,35 +221,39 @@
 
    <header id="header6">
     <div class="main">
-        <img src="./Images/page6.png" alt="" id="img6">
-
-        <img src="./Images/Burger-House6.png" alt="" id="Burger-House6">
-
-        <p id="page6p1">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed <br> do eiusmod tempor incididunt ut labore et dolore magna <br> aliqua. Quis ipsum suspendisse ultrices gravida. Risus <br> commodo viver ra maecenas accumsan lacus vel facilisis. 
-        </p>
-
-        <p id="page6p2">
-            © Company Name 2020. All rights reserved.
-        </p>
-        
-        <p id="page6p3">
-            <i class="fa-solid fa-location-dot"></i>
-            Main Road, Building Name, Country
-        </p>
-
-        <p id="page6p4">
-            <img src="./Images/Email.png" alt="">
-            info@companyname.com
-        </p>
-
-        <div class="icons">
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-whatsapp"></i>
+    <div class="main-container1">        
+        <div class="image-wrapper">
+            <img src="./Images/Burger-House6.png" alt="" id="page6img">
         </div>
-    </div>
+        <div class="text">
+            <p id="page6p1">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viver ra maecenas accumsan lacus vel facilisis. 
+            </p>
+        </div>
+        <div class="last">
+            <p id="page6p2">
+                © Company Name 2020. All rights reserved.
+            </p>
+        </div>
+        </div>
+        <div class="main-container2">
+            <div class="text2">
+                <p id="icon1">
+                    <i class="fa-solid fa-location-dot"></i>
+                Main Road, Building Name, Country</p>
+                <p id="icon2">
+                    <i class="fa-solid fa-envelope"></i>
+                    info@companyname.com
+                </p>
+            </div>
+            <div class="icons">
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-whatsapp"></i>
+            </div>
+        </div>
+        </div>
    </header>
 </body>
 </html>
