--- a/Burgir-web/Burger.html
+++ b/Burgir-web/Burger.html
@@ -12,18 +12,6 @@
     <header id="header1">
         <img src="./Images/Burger-house.png" alt="" id="logo1">
 
-        <img src="./Images/Drinks.png" alt="" id="Drinks">
-
-        <img src="./Images/main-burger.png" alt="" id="Burger">
-
-        <img src="./Images/French Fries.png" alt="" id="Fries">
-
-        <img src="./Images/Ellipse.png" alt="" id="Ellipse">
-
-        <img src="./Images/Price.png" alt="" id="Price">
-
-        <img src="./Images/Shadow.png" alt="" id="Shadow">
-
         <div class="expressdelievry">
             <img src="./Images/Vector Smart Object.png" alt="">
             <p id="pagep1">
@@ -45,15 +33,26 @@
                     It is a good time for the great taste of burgers
                 </div>
                 <div id="title1">
-                    Burger  <br>
+                    Burger  
                     Week
                 </div>
             </div>
+        <div class="content2">
 
-            <div class="mainimg1">
-                <img src="./Images/Image.png" alt="" id="img1">
-            </div>
+         <img src="./Images/Drinks.png" alt="" id="Drinks">
+
+        <img src="./Images/main-burger.png" alt="" id="Burger">
+
+        <img src="./Images/French Fries.png" alt="" id="Fries">
+
+        <img src="./Images/Ellipse.png" alt="" id="Ellipse">
+
+        <img src="./Images/Price.png" alt="" id="Price">
+
+        <img src="./Images/Shadow.png" alt="" id="Shadow">
+
         </div>
+            </div>
 
     </header>
 
@@ -156,6 +155,7 @@
 
     <header id="page4">
         <div class="jointpage4">
+            
             <div class="page4content">
             <p id="page4p1">
                 Discover
@@ -171,10 +171,12 @@
 
             <img src="./Images/Ellipsepage4.png" alt="" id="page4img3">
             </div>
-
+        
+        <div class="page4content2">
             <div class="page4images">
                 <img src="./Images/page4.png" alt="" id="page4image2">
             </div>
+        </div>
         </div>
     </header>
 
@@ -243,8 +245,7 @@
                 Main Road, Building Name, Country</p>
                 <p id="icon2">
                     <i class="fa-solid fa-envelope"></i>
-                    info@companyname.com
-                </p>
+                    info@companyname.com</p>
             </div>
             <div class="icons">
                 <i class="fa-brands fa-instagram"></i>
