--- a/Dr.Reddy/Reddy1.html
+++ b/Dr.Reddy/Reddy1.html
@@ -6,130 +6,120 @@
     <title>Dr.Reddy</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="./Reddy.css">
+    <style>
+       
+    </style>
 </head>
 <body>
     <header id="header1">
-        <div class="positon">
+        <div class="page1place">
         <div class="nav-wrapper">
             <nav class="nav1">
                 <div class="icon1">
-                    <img src="./image/DrR_Logo_Primary_RGB.svg" alt="" id="icon1">
+                    <img src="./image/DrR_Logo_Primary_RGB.svg" alt="" >
                 </div>
                 <div class="menu1">
                     <ul class="menu">
-                        <li><a href="#" class="line1">investors</a></li>
-                        <li><a href="#" class="line1">Media</a></li>
-                        <li><a href="#" class="line1">partners</a></li>
-                        <li><a href="#" class="line1">Careers</a></li>
-                        <li><a href="#" class="line1">contact us</a></li>
+                        <li><a href="#">investors</a></li>
+                        <li><a href="#">Media</a></li>
+                        <li><a href="#">partners</a></li>
+                        <li><a href="#">Careers</a></li>
+                        <li><a href="#">contact us</a></li>
                     </ul>
                     <div class="icon2">
-                        |
-                        <i class="fa-solid fa-globe" id="icon3"></i>
-                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <img src="./image/globe-icon.svg" alt="">
+                        <img src="./image/search-feather.svg" alt="">
                     </div>
                 </div>
             </nav>
         </div>
 
-        <nav class="nav2">
-            <ul class="menu2">
-                <div class="menu3">
-                <li><a href="#" class="home1"><b>Home</b></a></li>
-                <div class="investors">
-                    <table class="class1">
-                        <tr>
-                            <th><a href="#">about Us</a></th>
-                            <th><a href="#">latest news</a></th>
-                        </tr>
-                        <tr>
-                            <th><a href="#">building a Sustainable future</a></th>
-                        </tr>
-                        <tr>
-                            <th><a href="#">#wearedrreddy's</a></th>
-                        </tr>
-                    </table>
-                </div>
+        <div class="maindrop">
+        <div class="dropdown">
+            <a href="#" id="home1">Home</a>
+            <table class="dropdown-option">
+                <tr>
+                    <td><a href="#">About Us</a></td>
+                    <td><a href="#">latest news</a></td>
+                </tr>
+                <tr>
+                    <td><a href="#">Building A Sustainable Future</a></td>
+                </tr>
+                <tr>
+                    <td><a href="#">#WeAreDrReddys</a></td>
+                </tr>
+            </table>
+        </div>
 
-            </div>
-                <div class="menu3">
-                <li><a href="#">who we are</a></li>
-                <div class="investors">
-                    <table class="class1">
-                        <tr>
-                            <th><a href="#">Purpose</a></th>
-                            <th><a href="#">values</a></th>
-                            <th><a href="#">our journey</a></th>
-                        </tr>
-                        <tr>
-                            <th><a href="#">Promises</a></th>
-                            <th><a href="#">leadership</a></th>
-                        </tr>
-                        <tr>
-                            <th><a href="#">principles</a></th>
-                            <th><a href="#">our founder</a></th>
-                        </tr>
-                    </table>
-                </div>
-                </div>
+        <div class="dropdown">
+            <a href="#">who we are</a>
+            <table class="dropdown-option">
+                <tr>
+                    <td><a href="#">Purpose</a></td>
+                    <td><a href="#">values</a></td>
+                    <td><a href="#">our journey</a></td>
+                </tr>
+                <tr>
+                    <td><a href="#">Promises</a></td>
+                    <td><a href="#">leadership</a></td>
+                </tr>
+                <tr>
+                    <td><a href="#">principles</a></td>
+                    <td><a href="#">our founder</a></td>
+                </tr>
+            </table>
+        </div>
 
-                <div class="menu3">
-                <li><a href="#">our businesses</a></li>
-                <div class="investors">
-                    <table class="class1">
-                        <tr>
-                            <th><a href="#">our business</a></th>
-                            <th><a href="#">jobs</a></th>
-                        </tr>
-                        <tr>
-                            <th><a href="#">our capability</a></th>
-                            <th><a href="#">contact us</a></th>
-                        </tr>
-                        <tr>
-                            <th><a href="#">Stories</a></th>
-                        </tr>
-                    </table>
-                </div>
-            </div>
+        <div class="dropdown">
+            <a href="#">our business</a>
+            <table class="dropdown-option">
+                <tr>
+                    <td><a href="#">our business</a></td>
+                    <td><a href="#">jobs</a></td>
+                </tr>
+                <tr>
+                    <td><a href="#">our capability</a></td>
+                    <td><a href="#">contact us</a></td>
+                </tr>
+                <tr>
+                    <td><a href="#">Stories</a></th>
+                </tr>
+            </table>
+        </div>
 
-                <div class="menu3">
-                <li><a href="#">Sustainability</a></li>
-                <div class="investors">
-                    <table class="class1">
-                        <tr>
-                            <th><a href="#">about Us</a></th>
-                            <th><a href="#">latest news</a></th>
-                        </tr>
-                        <tr>
-                            <th><a href="#">building a Sustainable future</a></th>
-                        </tr>
-                        <tr>
-                            <th><a href="#">#wearedrreddy's</a></th>
-                        </tr>
-                    </table>
-                </div>
-            </div>
+        <div class="dropdown">
+            <a href="#">Sustainability</a>
+            <table class="dropdown-option">
+                <tr>
+                    <td><a href="#">about Us</a></td>
+                    <td><a href="#">latest news</a></td>
+                </tr>
+                <tr>
+                    <td><a href="#">building a Sustainable future</a></td>
+                </tr>
+                <tr>
+                    <td><a href="#">#wearedrreddy's</a></td>
+                </tr>
+            </table>
+        </div>
 
-                <div class="menu3">
-                <li><a href="#">Life at Dr. Reddy’s</a></li>
-                 <div class="investors">
-                    <table class="class1">
-                        <tr>
-                            <th><a href="#">Milestones</a></th>
-                            <th><a href="#">community initiatives</a></th>
-                        </tr>
-                        <tr>
-                            <th><a href="#">our ESG Goals</a></th>
-                            <th><a href="#">employee volunteering</a></th>
-                        </tr>
-                        <tr>
-                            <th><a href="#">Reports and Disclosures</a></th>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-            </ul>
-        </nav>
+        <div class="dropdown">
+            <a href="#">Life at Dr. Reddy’s</a>
+            <table class="dropdown-option">
+                <tr>
+                    <td><a href="#">Milestones</a></th>
+                    <td><a href="#">community initiatives</a></th>
+                </tr>
+                <tr>
+                    <td><a href="#">our ESG Goals</a></th>
+                    <td><a href="#">employee volunteering</a></th>
+                </tr>
+                <tr>
+                    <td><a href="#">Reports and Disclosures</a></th>
+                </tr>
+            </table>
+        </div>
+        </div>
     </div>
 
 
