--- a/Dr.Reddy/Reddy1.html
+++ b/Dr.Reddy/Reddy1.html
@@ -6,9 +6,7 @@
     <title>Dr.Reddy</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="./Reddy.css">
-    <style>
-       
-    </style>
+    <link rel="shortcut icon" href="./image/violet.svg" type="image/x-icon">
 </head>
 <body>
     <header id="header1">
@@ -27,7 +25,53 @@
                         <li><a href="#23">contact us</a></li>
                     </ul>
                     <div class="icon2">
-                        <img src="./image/globe-icon.svg" alt="">
+                        |
+                        <img src="./image/globe-icon.svg" alt="" id="globe">
+                        <div class="country-option">
+
+                            <div class="text">
+                            <h2>
+                                Country sites
+                            </h2>
+                        </div>
+
+                        <ul class="page1menu">
+                            <li>AUSTRALIA</li>
+                            <li>CANADA</li>
+                            <li>COLOMBIA</li>
+                            <li>FINLAND</li>
+                            <li>INDIA</li>
+                            <li>NEW ZEALAND</li>
+                            <li>RUSSIA</li>
+                            <li>SLOVAKIA</li>
+                            <li>UNITED KINGDOM</li>
+                        </ul>
+
+                        <ul class="page1menu">
+                            <li>AUSTRALIA</li>
+                            <li>CANADA</li>
+                            <li>COLOMBIA</li>
+                            <li>FINLAND</li>
+                            <li>INDIA</li>
+                            <li>NEW ZEALAND</li>
+                            <li>RUSSIA</li>
+                            <li>SLOVAKIA</li>
+                            <li>UNITED KINGDOM</li>
+                        </ul>
+
+                        <ul class="page1menu">
+                            <li>AUSTRALIA</li>
+                            <li>CANADA</li>
+                            <li>COLOMBIA</li>
+                            <li>FINLAND</li>
+                            <li>INDIA</li>
+                            <li>NEW ZEALAND</li>
+                            <li>RUSSIA</li>
+                            <li>SLOVAKIA</li>
+                            <li>UNITED KINGDOM</li>
+                        </ul>
+
+                        </div>
                         <img src="./image/search-feather.svg" alt="">
                     </div>
                 </div>
@@ -123,10 +167,11 @@
          </div>             <!--page1place -->
 
 
-        <div class="page1">
+            <div class="page1">
             <div class="images">
             </div>
-        </div>
+            </div>
+            </div>
     </header>
 
     <header id="header2">
