--- a/Burgir-web/Burger.html
+++ b/Burgir-web/Burger.html
@@ -7,9 +7,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="./Burger.css">
     <link rel="stylesheet" href="./media.css">
+
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+  
 </head>
 <body>
-    <header id="header1">
+    <header id="header1" class="animate__animated animate__flip">
         <img src="./Images/Burger-house.png" alt="" id="logo1">
 
         <div class="expressdelievry">
@@ -32,27 +38,27 @@
                 <div id="para1">
                     It is a good time for the great taste of burgers
                 </div>
-                <div id="title1">
+                <div id="title1" class="animate__animated animate__flip">
                     Burger  
                     Week
                 </div>
             </div>
-        <div class="content2">
+            <div class="content2">
 
-         <img src="./Images/Drinks.png" alt="" id="Drinks">
+            <img src="./Images/Drinks.png" alt="" id="Drinks" >
 
-        <img src="./Images/main-burger.png" alt="" id="Burger">
+            <img src="./Images/main-burger.png" alt="" id="Burger">
 
-        <img src="./Images/French Fries.png" alt="" id="Fries">
+            <img src="./Images/French Fries.png" alt="" id="Fries">
 
-        <img src="./Images/Ellipse.png" alt="" id="Ellipse">
+            <img src="./Images/Ellipse.png" alt="" id="Ellipse">
 
-        <img src="./Images/Price.png" alt="" id="Price">
+            <img src="./Images/Price.png" alt="" id="Price">
 
-        <img src="./Images/Shadow.png" alt="" id="Shadow">
+            <img src="./Images/Shadow.png" alt="" id="Shadow">
 
-        </div>
             </div>
+         </div>
 
     </header>
 
