--- a/Dr.Reddy/hover.html
+++ b/Dr.Reddy/hover.html
@@ -23,11 +23,13 @@
             height: 250px;
             margin: 0 auto;
             overflow: hidden;
+            transition: 3s 5s;
         }
         .images img:hover
         {
-            transform: scale(1.2);
+            transform: scale(1.5);
         } 
+    
 
     </style>
 </head>
