--- a/sushi-web/sushi.html
+++ b/sushi-web/sushi.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task7</title>
+    <link rel="shortcut icon" href="./image/image1.png" type="image/x-icon">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -18,6 +19,7 @@
    <header class="header1">
     <div class="nav-wrapper">
         <div class="container">
+            <i class="fa-solid fa-bars" id="bar"></i>
             <input type="checkbox" id="check1">
             <nav>
                 <div class="image">
