--- a/Dr.Reddy/Reddy1.html
+++ b/Dr.Reddy/Reddy1.html
@@ -476,9 +476,16 @@
             </div>
 
             <div class="page8container2">
+
                 <div class="page8img">
-                    <img src="./image/main-image.png" alt="">
+                    <div class="page8textwrapper">
+                    <div class="page8text3">    
+                        <p>
+                            Dr. Reddy's rolls out USFDA-approved drug-free non-invasive migr...
+                        </div>  
+                    </div>
                 </div>
+
                 <div class="page8text">
                     <div id="page8text1">
                         Q2 FY’24 Results | M V Ramana | BQ Prime</div>
