--- a/Dr.Reddy/hover.html
+++ b/Dr.Reddy/hover.html
@@ -16,6 +16,7 @@
         {
             width: 100%;
             height: 100%;
+            transition: 2s ease-in-out 0.5s all;
         }
         .images
         {
@@ -23,7 +24,6 @@
             height: 250px;
             margin: 0 auto;
             overflow: hidden;
-            transition: 3s 5s;
         }
         .images img:hover
         {
