--- a/Amazon/amazon.html
+++ b/Amazon/amazon.html
@@ -6,6 +6,7 @@
     <title>Amazon</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="./amazon.css">
+    <link rel="shortcut icon" href="./Images/amazon-logo.png" type="image/x-icon">
     
 </head>
 <body>
