--- a/Netflix/Netflix.html
+++ b/Netflix/Netflix.html
@@ -93,6 +93,16 @@
 
                 <div class="page3-images">
                     <img src="./Image/Stranger-things.jpg" alt="">
+
+                    <div class="magic">
+                        <img src="./Image/boxshot.png" alt="" id="img1">
+                        <div class="magic2">
+                            <p>Stranger Things</p>
+                            <p id="p3">Downloading...</p>
+                        </div>
+                        <img src="./Image/download-icon.gif" alt="" id="img2">
+                    </div>
+
                 </div>
         
             </div>
