--- a/Netflix/Netflix.html
+++ b/Netflix/Netflix.html
@@ -71,7 +71,8 @@
                 </div>
 
                 <div class="page2-images">
-                    <img src="./Image/netflix-tv.png" alt="">
+                    <img src="./Image/netflix-tv.png" alt="" id="page2img">
+                    <video src="./Video/video2.mp4" id="video1"></video>
                 </div>
         
             </div>
@@ -123,6 +124,8 @@
 
                 <div class="page3-images">
                     <img src="./Image/devices.png" alt="">
+                    <video src="./Video/video1.mp4" id="video2">
+                    </video>
                 </div>
 
             </div>
