--- a/Netflix/Netflix.html
+++ b/Netflix/Netflix.html
@@ -72,7 +72,7 @@
 
                 <div class="page2-images">
                     <img src="./Image/netflix-tv.png" alt="" id="page2img">
-                    <video src="./Video/video2.mp4" id="video1"></video>
+                    <video src="./Video/video2.mp4" id="video1" controls autoplay muted ></video>
                 </div>
         
             </div>
@@ -124,7 +124,7 @@
 
                 <div class="page3-images">
                     <img src="./Image/devices.png" alt="">
-                    <video src="./Video/video1.mp4" id="video2">
+                    <video src="./Video/video1.mp4" id="video2" autoplay controls muted>
                     </video>
                 </div>
 
