--- a/Netflix/Netflix.html
+++ b/Netflix/Netflix.html
@@ -258,7 +258,7 @@
                 <h3>Ready to watch? Enter your email to create or restart your membership.</h3>
                 <div class="inputes">
                     <input type="email" placeholder="Email address" id="input2">
-                    <button id="button2" onclick="functioninput2(this)">
+                    <button id="button2" onclick="functioninput2()">
                         Get started
                         <i class="fa-solid fa-angle-right"></i>
                     </button>
