--- a/Netflix/Netflix.html
+++ b/Netflix/Netflix.html
@@ -29,12 +29,12 @@
             </button>  
 
             <div class="bg-wrapper">
-                <button id="white-theme" >White</button>
+                <button id="white-theme" style="background: white;">White</button>
                 <div class="bg-mini-wrapper">
-                <button id="IndianRed">IndianRed</button>
-                <button id="Crimson">Crimson</button>
-                <button id="Red">Red</button>
-                <button id="Lavender">Lavender</button>
+                <button id="IndianRed" style="background: indianred;">IndianRed</button>
+                <button id="Crimson" style="background: crimson;">Crimson</button>
+                <button id="Red" style="background: red;">Red</button>
+                <button id="Lavender" style="background: lavender;">Lavender</button>
                 </div>
             </div>
 
