--- a/footer/Footer.html
+++ b/footer/Footer.html
@@ -23,13 +23,15 @@
             width: 90%;
             display: flex;
             justify-content: space-between;
+            flex-wrap: wrap;
         }
-        ul
+       .wrapper ul
         {
             list-style: none;
         }
-        li
+       .wrapper li
         {
+            color: #FEFEFF99;
             padding: 10px 0px;
         }
         .info
@@ -37,11 +39,7 @@
             font-size: 21px;
             color: white;
         }
-        li
-        {
-            color: #FEFEFF99;
-        }
-        img
+       .wrapper img
         {
             width: 150px;
             height: 63px;
