--- a/footer/Cards.html
+++ b/footer/Cards.html
@@ -25,7 +25,7 @@
              display: flex;
             flex-wrap: wrap;
             row-gap: 10px;
-            flex-grow: 2;
+            /* flex-grow: 2; */
         }
         .cards-wrapper
         {
