--- a/BrowseInfo/Index.html
+++ b/BrowseInfo/Index.html
@@ -23,11 +23,11 @@
             <ul class="lists ">
 
                 <div class="wrapper1">
-                <li id="About">About Us ▾</li>
+                <li id="About"><a href="#23">About Us ▾</a></li>
                 
                 <ul id="About-us">
-                    <li>About Us</li>
-                    <li>Odoo Gold Partner</li>
+                    <li> <a href="#23">About Us</a></li>
+                    <li> <a href="#23">Odoo Gold Partner</a></li>
                 </ul>
                 </div>
 
@@ -38,28 +38,28 @@
                 <ul class="Services-list">
 
                     <ul>
-                       <li> Odoo Consultancy</li>
-                       <li>Odoo Integration</li>
-                       <li>Odoo Support</li>
-                       <li>Odoo Development</li>
-                       <li>Odoo App Customization</li>
+                       <li><a href="#23"> Odoo Consultancy</a></li>
+                       <li><a href="#23">Odoo Integration</a></li>
+                       <li><a href="#23">Odoo Support</a></li>
+                       <li><a href="#23">Odoo Development</a></li>
+                       <li><a href="#23">Odoo App Customization</a></li>
                      </ul>
 
                     <ul>
-                       <li>Odoo Implementation</li>
-                        <li>Odoo Migration</li>
-                        <li>Odoo Training</li>
-                        <li>Hire Odoo Developer</li>
+                       <li><a href="#23">Odoo Implementation</a></li>
+                        <li><a href="#23">Odoo Migration</a></li>
+                        <li><a href="#23">Odoo Training</a></li>
+                        <li><a href="#23">Hire Odoo Developer</a></li>
                     </ul>
 
                 </ul>
                 </div>
 
-                <li>Publication</li>
-                <li>Our Apps</li>
-                <li><img src="./Image/browse_info.jpg" alt=""></li>
-                <li>Support Request</li>
-                <li>Contact Us</li>
+                <li><a href="">Publication</a></li>
+                <li><a href="">Our Apps</a></li>
+                <li><a href=""><img src="./Image/browse_info.jpg" alt=""></a></li>
+                <li><a href="">Support Request</a></li>
+                <li><a href="">Contact Us</a></li>
             </ul>
 
             <div class="button-wrap">
